--- a/html-css/module-10/css/style.css
+++ b/html-css/module-10/css/style.css
@@ -103,7 +103,7 @@ html {
   background-position: center;
   background-size: cover;
   padding-top: 28px;
-  padding-bottom: 244px;
+  padding-bottom: 184px;
 }
 
 .container {
@@ -254,6 +254,7 @@ html {
 
 .header__btn:hover {
   background: rgba(243, 129, 129, 0.9);
+  transition: 0.6s linear;
 }
 
 .header__btn:hover:before {
@@ -279,6 +280,8 @@ html {
   font-family: "Kaushan Script", cursive;
   display: block;
   margin-bottom: 22px;
+  font-size: 24px;
+  font-weight: 400;
 }
 
 .services-title::after,
